fix: home styles

--- a/src/Components/News/News.scss
+++ b/src/Components/News/News.scss
@@ -44,7 +44,7 @@
   }
   .post-right > p{
     width: 325px;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
   }
   .post-right > a{
     color: #F9B300;
