--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,9 +30,9 @@
   @media (max-width: 470px) {
     padding: 0;
   }
-  @media (min-width: 1556px) {
-    min-width: 1556px;
-  }
+  // @media (min-width: 1556px) {
+  //   min-width: 1556px;
+  // }
 }
 a:active,
 button:active {
