add: some styles in catalog

--- a/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
@@ -194,6 +194,7 @@
       text-align: center;
       justify-content: center;
       &-card {
+        // padding-bottom: 33px;
         box-shadow: 0px 0px 21.2553px rgba(149, 149, 149, 0.25);
         border-radius: 14px;
         text-align: left;
