--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,9 +12,6 @@
   @media (max-width: 470px) {
     padding: 0;
   }
-  // @media (min-width: 1556px) {
-    //   min-width: 1556px;
-  // }
 }
 a:active,
 button:active {
@@ -48,21 +45,18 @@ body {
 }
 .wrapper {
   min-height: 100%;
-  // font-family: Gilroy ;
 }
 .forDF{
   display: flex;
 }
 
+// Catalog //
+@import "../pages/Catalog/catalog.scss";
+// Catalog //
 @import "../Layout/Header/Header.scss";
+@import "../Layout/Footer/Footer.scss";
 @import "../pages/Profile/Profile.scss";
 @import "../pages/Home/Home.scss";
-@import "../Layout/Footer/Footer.scss";
-@import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
-@import "../pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss";
-@import "../pages/Catalog/Tea/Tea-Filters/Tea-Filters.scss";
-@import "../pages/Catalog/HealthyEating/HealthyEating-Filters/HealthyEating-Filters.scss";
-@import "../pages/Catalog/Tea/Tea-Items/Tea-Items.scss";
 @import "../pages/Contacts/Contact.scss";
 @import "../pages/Blog/Blog.scss";
 @import "../pages/Contacts/Contact.scss";
