--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -242,10 +242,6 @@
       width: 93px;
     }
   }
-  // Вот и вся функция .
-  .white-circle.clicked {
-    background-color: #f9b300;
-  }
   .white-circle:active {
     cursor: default;
   }
@@ -278,6 +274,47 @@
   text-align: right;
   padding-right: 50px;
   justify-content: right;
+  & .one{
+      border-radius:6px;
+      font-size: 11px;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 900;
+      color: #524f4e;
+      cursor: pointer;
+      padding:3px;
+      transform: translateY(-13px);
+      background: white;
+      box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+      transition: .2s;
+    &:hover {
+      background: #f9b300;
+      box-shadow: 0 5px 13px rgba(46, 229, 157, .4);
+      // color: white;
+    }
+  }
+  & .two{
+    &>img{
+      transform: translateY(3px);
+    }
+    border-radius:6px;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    color: #524f4e;
+    cursor: pointer;
+    padding:3px;
+    transform: translateY(-13px);
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .2s;
+  &:hover {
+    background: #f9b300;
+    box-shadow: 0 5px 13px rgba(46, 229, 157, .4);
+    // color: white;
+  }
+  }
 }
 .divdn{
   display: none;
