--- a/src/pages/Contacts/Contact.scss
+++ b/src/pages/Contacts/Contact.scss
@@ -16,11 +16,12 @@
   font-size: 12px;
   line-height: 14px;
   color: #222222;
+  margin-left: 18px;
   
 }
 .cont-blog {
   width: 54px;
-  height: 14px;
+  height: 15px;
   transform: translate(55px, -15px);
   font-family: "Gilroy";
   font-style: normal;
@@ -28,6 +29,7 @@
   font-size: 12px;
   line-height: 14px;
   color: #222222;
+  margin-left: 18px;
 }
 .switch-contact {
   width: 580px;
@@ -46,6 +48,7 @@
   background: #FFF7E1;
   border: 1px solid #F9B300;
   border-radius: 5px;
+  margin-left: 18px;
 }
 }
 .switcр-stores {
@@ -58,6 +61,7 @@
   border: 1px solid #c9c9c9;
   border-radius: 4px;
   cursor: pointer;
+  margin-left: 18px;
 }
 @media (min-width: 175px) {
 .switcр-stores{
@@ -83,6 +87,12 @@
   font-size: 22px;
   line-height: 27px;
   color: #000000;
+  @media (max-width:1135px) {
+    width: 164px;
+    font-size: 18px;
+    margin-left: 18px;
+    
+  }
 }
 .number-contact {
   width: 111px;
@@ -94,6 +104,12 @@
   font-size: 14px;
   line-height: 130%;
   color: #222222;
+  @media (max-width:600px) {
+    width: 150px;
+    font-size: 14px;
+    margin-left: 18px;
+    
+  }
 }
 .link {
   width: 141px;
@@ -105,6 +121,11 @@
   font-size: 14px;
   line-height: 130%;
   color: #222222;
+  @media (max-width:590px) {
+  width: 150px;  
+  font-size: 14px;
+  margin-left: 18px;
+  }
 }
 .header-texts {
   width: 227px;
@@ -116,6 +137,28 @@
   font-size: 22px;
   line-height: 27px;
   color: #000000;
+  @media (max-width:700px) {
+    width: 190px;  
+    height: 20px;
+    font-size: 18px;
+    margin-left: 18px;
+    }
+
+}
+.maptip-yandex{
+  margin-left: 30px;
+  margin-top: 60px;
+  width: 600px;
+  height: 330px;
+  @media (max-width: 1139px) {
+    width: 500px;
+  }
+  @media (max-width: 921px) {
+    width: 400px;
+  }
+  @media (max-width: 647px) {
+    width: 300px;
+  }
 }
 .info {
   width: 347px;
@@ -127,6 +170,12 @@
   font-size: 14px;
   line-height: 130%;
   color: #222222;
+  @media (max-width:900px) {
+    width: 330px;  
+    height: 30px;
+    font-size: 14px;
+    margin-left: 18px;
+    }
 }
 .texts-cont {
   width: 154px;
@@ -138,6 +187,12 @@
   font-size: 22px;
   line-height: 27px;
   color: #000000;
+  @media (max-width:900px) {
+    width: 136px;  
+    height: 30px;
+    font-size: 18px;
+    margin-left: 18px;
+    }
 }
 .new-t {
   width: 300px;
@@ -149,6 +204,11 @@
   font-size: 14px;
   line-height: 130%;
   color: #222222;
+  @media (max-width:900px) {
+    width: 290px;  
+    font-size: 14px;
+    margin-left: 18px;
+    }
 }
 .store-t {
   // width: 421px;
@@ -160,6 +220,11 @@
   font-size: 22px;
   line-height: 27px;
   color: #000000;
+  @media (max-width:647px) {
+    width: 378px;
+    font-size: 18px;
+    margin-left: 18px;
+  }
 }
 .adres-c {
   width: 102px;
@@ -171,6 +236,11 @@
   font-size: 14px;
   line-height: 130%;
   color: #000000;
+  @media (max-width:690px) {
+    width: 102px;
+    margin-left: 18px;
+    
+  }
 }
 .t-t {
   // width: 444px;
@@ -182,6 +252,12 @@
   font-size: 22px;
   line-height: 27px;
   color: #000000;
+  @media (max-width:1113px) {
+    width: 342px;
+    font-size: 18px;
+    margin-left: 18px;
+    
+  }
 }
 .adress-store {
   width: 180px;
@@ -193,15 +269,22 @@
   font-size: 14px;
   line-height: 130%;
   color: #000000;
+  @media (max-width:549px) {
+    width: 174px;
+    font-size: 14px;
+    margin-left: 18px;
+    
+  }
 }
 .aga {
     // position: relative;
     // transform: translate(499px, -336px);
+    padding-bottom: 60px;
     top: -452px;
     left:437px
 }
 .contacts-left.forDF{
-  @media (max-width: 1139px) {
+  @media (max-width: 597px) {
     display: block;
   }
 }
