--- a/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
@@ -283,6 +283,10 @@
         font-size: smaller;
         color: #4057cd;
       }
+      .tocenter{
+        text-align: center;
+        justify-content: center;
+      }
     }
     // .grey{
     //     background-color: #F5F5F5;
