--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -17,6 +17,10 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
+  @media(max-width: 375){
+    width: 300px;
+    display: flex;
+  }
 }
 .btn_switch {
   width: 380px;
@@ -26,6 +30,10 @@
   border-radius: 4px;
   color: #f9b300;
   cursor: pointer;
+  @media (max-width: 375px) {
+    width: 1584px;
+    
+  }
 }
 .btn_switchnews {
   width: 380px;
@@ -34,6 +42,9 @@
   border-radius: 4px;
   color: #f9b300;
   cursor: pointer;
+  @media (max-width: 375px) {
+    width: 1200px;
+}
 }
 .btn_switchches {
   width: 380px;
@@ -54,6 +65,13 @@
   line-height: 35px;
   color: #000000;
   margin: 60px 705px 30px 0px;
+  @media (max-width: 376px) {
+    width: 186px;
+    height: 44px;
+    font-size: 18px;
+    line-height: 22px;
+    margin-left: 18px;
+  }
 }
 .text_infoh1 {
   width: 349px;
@@ -65,6 +83,12 @@
   line-height: 35px;
   color: #000000;
   margin: 80px 915px 40px 0px;
+  @media (max-width: 1131px) {
+    font-size: 18px;
+    line-height: 22px;
+    margin-left: 18px;
+    margin-top: 6px;
+  }
 }
 .forref{
   transform: translateY(-100px);
@@ -79,12 +103,32 @@
   line-height: 130%;
   color: #222222;
   margin: 50px 286px 0px 0px;
+  @media (max-width: 900px) {
+    width: 340px;
+    height: 432px;
+    font-weight: 500;
+    font-size: 14px;
+    margin-left: 18px;
+    margin-top: -24px;
+  }
 }
 .coffe_logo_blog {
   margin-top: 50px;
+  @media (max-width: 800px) {
+    width: 339px;
+    height: 170px;
+    margin-left: 18px;
+    margin-top: -2px;
+  }
 }
 .coffe_logo_blog3 {
   margin-top: 60px;
+  @media (max-width: 700px) {
+    width: 339px;
+    height: 170px;
+    margin-left: 18px;
+    margin-top: -156px;
+  }
 }
 .news_bottom {
   width: 100%;
@@ -105,6 +149,16 @@
   border: 0.709034px solid #f9b300;
   border-radius: 4px;
   color: #f9b300;
+  @media (max-width: 379px) {
+    width: 160px;
+    height: 30px;
+    border: 1px solid #F9B300;
+    border-radius: 5px;
+    margin-top: 50px;
+    margin-right: 199px;
+    margin-top: 50px;
+    
+  }
 }
 .button_numbtwo {
   width: 180px;
@@ -113,31 +167,39 @@
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
   color: #f9b300;
+  @media (max-width: 383px) {
+    width: 160px;
+    height: 30px;
+    border: 1px solid #C9C9C9;
+    border-radius: 5px;
+    
+    
+  }
 }
-.button_numbtag3 {
-  width: 180px;
-  height: 31px;
-  background: #f7f7f7;
-  border: 0.709034px solid #c9c9c9;
-  border-radius: 4px;
-  color: #f9b300;
-}
-.button_numbtag4 {
-  width: 180px;
-  height: 31px;
-  background: #f7f7f7;
-  border: 0.709034px solid #c9c9c9;
-  border-radius: 4px;
-  color: #f9b300;
-}
-.button_numbtag5 {
-  width: 180px;
-  height: 31px;
-  background: #f7f7f7;
-  border: 0.709034px solid #c9c9c9;
-  border-radius: 4px;
-  color: #f9b300;
-}
+// .button_numbtag3 {
+//   width: 180px;
+//   height: 31px;
+//   background: #f7f7f7;
+//   border: 0.709034px solid #c9c9c9;
+//   border-radius: 4px;
+//   color: #f9b300;
+// }
+// .button_numbtag4 {
+//   width: 180px;
+//   height: 31px;
+//   background: #f7f7f7;
+//   border: 0.709034px solid #c9c9c9;
+//   border-radius: 4px;
+//   color: #f9b300;
+// }
+// .button_numbtag5 {
+//   width: 180px;
+//   height: 31px;
+//   background: #f7f7f7;
+//   border: 0.709034px solid #c9c9c9;
+//   border-radius: 4px;
+//   color: #f9b300;
+// }
 .ul_news {
   display: flex;
 }
@@ -155,11 +217,21 @@
   box-shadow: 0px 0px 21.2553px rgba(146, 146, 146, 0.2);
   border-radius: 14px;
   margin-top: 44px;
+  @media (max-width:378px) {
+    width: 340px;
+    height: 403px;
+  }
 }
 .post-right-h2 {
   width: 574px;
   height: 23px;
   margin-bottom: 40px;
+  @media (max-width:379px) {
+    width: 270px;
+    height: 42px;
+    font-size: 16px;
+    line-height: 130%;
+  }
 }
 .post-right > p {
   width: 582px;
@@ -297,4 +369,21 @@
   transform: translateY(-452px);
   // width: 1200px;
   // height: 21px;
+}
+.company{
+    width: 121px;
+    height: 36px;
+    font-family: 'Gilroy';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 35px;
+    @media (max-width: 382px) {
+      width: 235px;
+      height: 22px;
+      font-size: 18px;
+      line-height: 22px;
+      margin-left: 18px;
+      
+  }
 }
