--- a/src/Components/News/News.scss
+++ b/src/Components/News/News.scss
@@ -2,9 +2,9 @@
   max-width: 100%;
   height: 805px;
   background: #FFF7E1;
-  transform: translateY(360px);
+  transform: translateY(397px);
   .news-container {
-    max-width: 1556px;
+    max-width: 1170px;
     padding: 0 30px;
     margin: 0 auto;
   }
@@ -31,20 +31,20 @@
     transform: translateX(10px);
   }
   .post-right{
-    padding: 24px 55px 20px 120px;
-    width: 680px;
-    height: 280px;
+    padding: 28px 68px 2px 47px;
+    width: 410px;
+    height: 283px;
     background: #FFFFFF;
     box-shadow: 0px 0px 21.2553px rgba(146, 146, 146, 0.2);
     border-radius: 14px;
   }
   .post-right > h2{
-    width: 465px;
+    width: 325px;
     margin-bottom: 20px;
+    font-size: 18px;
   }
   .post-right > p{
     width: 325px;
-    // margin-bottom: 10px;
   }
   .post-right > a{
     color: #F9B300;
@@ -53,12 +53,12 @@
     transform: translate(92px, -16px);
   }
   .post-second{
-    width: 500px;
+    width: 427px;
     height: 283px;
     background: #FFFFFF;
     box-shadow: 0px 0px 21.2553px rgba(146, 146, 146, 0.2);
     border-radius: 14.1702px;
-    padding: 50px 100px 42px 80px;
+    padding: 50px 100px 42px 53px;
   }
   .post-second > h2{
     width: 348px;
