add: catalog styles & fix: filters styles

--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -45,6 +45,9 @@
         @media (max-width: 981px){
           color: #FD6F3B;
         }
+        @media (max-width: 766px) {
+          color: black;
+        }
         height: 43px;
         line-height: 44px;
       }
