--- a/src/pages/Catalog/Tea/Tea-Items/Tea-Items.scss
+++ b/src/pages/Catalog/Tea/Tea-Items/Tea-Items.scss
@@ -1,14 +1,16 @@
-.tea__cards-inner-row-card-top-right{
-    justify-content: space-between;
+.tea__cards-inner-row-card-top-right {
+  justify-content: space-between;
 }
-.card-title-jiest{
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 30px;
-    color: #222222;        
+.card-title-jiest {
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 30px;
+  color: #222222;
 }
-
-.kkdwe{
-    gap: 5px;
-    align-items: flex-end;
+.tea-cards-back {
+  background-color: #f5f5f5;
+}
+.kkdwe {
+  gap: 5px;
+  align-items: flex-end;
 }
